fix: tag input on small screen (#447)

--- a/resources/assets/css/_forms.css
+++ b/resources/assets/css/_forms.css
@@ -249,7 +249,8 @@
 }
 
 .taggle_input {
-    @apply w-0 my-1 bg-none;
+    width: 1ch;
+    @apply max-w-full my-1 bg-none;
 }
 
 .taggle_sizer {
